# ANE-LM

./: .gitignore  CMakeLists.txt  common.cpp  main.cpp  utils.cpp  utils.h
core/: ane_runtime.cpp  ane_runtime.h  cpu_ops.cpp  cpu_ops.h  metal_ops.h  metal_ops.mm  tokenizer.cpp
include/ane_lm/: ane_lm.h  common.h
lib/: ane_lm_c.cpp
models/llm/: gemma3.cpp  gemma3.h  qwen3.cpp  qwen3.h
server/: http_server.cpp  http_server.h
